3.2.1


TODO working on bug fix: Windows: driver is changed during connection results
     sometimes in lowed noise



3.2.0

- new GUI style of the main window, added switch for selecting the GUI style
  in the settings window

- a list of available servers is shown on pressing the connect button, the list
  is managed by a central server, any private server is added automatically if
  the registering setting is enabled

- the jitter buffer size can be independently set for client and server

- improved auto jitter buffer algorithm

- the Qt project file is now used for Linux, too

- ini-file is stored in the home directory instead of the application directory

- added server settings in the GUI for the server list and added ini file
  support to store the settings

- bug fix: fixed Jack audio interface instability


3.1.2

- show warning in main window if audio delay is too long

- added download link in help menu

- bug fix: solo switch did not work correctly


3.1.1

- added stereo audio channel support

- added input/output audio channel mapping for ASIO audio interface


3.1.0

- support for MacOS (using CoreAudio audio interface)

- sound card frame size support for frame sizes other than 128, 256 and 512
  samples

- improvement of network buffer (jitter buffer) in case of small buffer sizes

- all available ASIO sample formats supported

- bug fix for M-Audio Delta ASIO driver


3.0.3

- accessibility improvements

- show number of connected clients in window title (and therefore in OS task
  bar)

- added "Whats this" help text to the GUI controls in the general settings
  dialog, added Tool Tips to some GUI controls

- server logging history grid lines of weekend days are now plotted with
  different line width

- removed ALSA support since the ALSA interface implementation in llcon was
  buggy and will not be maintained in the future

- bug fix: fix for server logging history graph x-axis

- bug fix: fix for disconnect issue at the server


3.0.2
